Revision history for {{$dist->name}}

{{$NEXT}}
    - Change author to mikkoi@cpan.org
    - Fix dist.ini, remove needless quotation marks
    - Devel::AssertOS included again in distro, in subdir inc
    - Add Slaven Rezić as a contributor (CPAN tester report)

0.100     2019-07-05 11:35:04+02:00 Europe/Stockholm
    - Bump version number to 0.100 because 0.010 is less than 0.09.
        Obvious, really!

0.010     2019-07-05 11:28:37+02:00 Europe/Stockholm 
    - Modernize repository. Use Dist::Zilla. Put repo to GitHub.

0.09    2013-Jun-27
	- Used use-devel-assertos in Devel-CheckOS to package Devel::AssertOS Unix into the distribution.

0.08    2013-Jun-26
	- Change in MANIFEST.
	- Changes in the repository:
	  added properties.

0.07    2013-Jun-26
	- Change in MANIFEST.

0.06    2013-Jun-26
	- Change in MANIFEST.

0.05    2013-Jun-17
	- Change in MANIFEST.

0.04    2013-Jun-16
	- Dependency additions: AssertOS Unix.

0.03    2011-Aug-15
	- Minor corrections.

0.02    2011-Aug-09
	- Removed dependence from module Readonly.

0.01    2011-Aug-01
    - First version.
