@@ -5,6 +5,7 @@ Revision history for {{$dist->name}}
     - Fix dist.ini, remove needless quotation marks
     - Devel::AssertOS included again in distro, in subdir inc
     - Add Slaven Rezić as a contributor (CPAN tester report)
+    - Change spelling of initialized to initialised (en_GB)
 
 0.100     2019-07-05 11:35:04+02:00 Europe/Stockholm
     - Bump version number to 0.100 because 0.010 is less than 0.09.
